# asteroid-settings

./: .gitignore  0001-Add-airplane-mode-toggle-to-QuickPanel-settings.patch  AboutPage.qml  AlwaysOnDisplayPage.qml  BluetoothPage.qml  BrightnessPage.qml  CMakeLists.txt  DatePage.qml  DisplayPage.qml  GridItem.qml  LanguagePage.qml  ListItem.qml  PoweroffPage.qml  RebootPage.qml  RestartPage.qml  ScreenPage.qml  SoundPage.qml  TiltToWakePage.qml  TimePage.qml  USBPage.qml  UnitsPage.qml  WallpaperPage.qml  WatchfacePage.qml  asteroid-settings.ca.ts  asteroid-settings.ckb.ts  asteroid-settings.cs.ts  asteroid-settings.de.ts  asteroid-settings.desktop  asteroid-settings.desktop.template  asteroid-settings.el.ts  asteroid-settings.es.ts  asteroid-settings.fa.ts  asteroid-settings.fr.ts  asteroid-settings.hu.ts  asteroid-settings.in  asteroid-settings.it.ts  asteroid-settings.kab.ts  asteroid-settings.ko.ts  asteroid-settings.nl.ts  asteroid-settings.pl.ts  (+17 more)
i18n/: asteroid-settings.ace.ts  asteroid-settings.ar.ts  asteroid-settings.ast.ts  asteroid-settings.az.ts  asteroid-settings.be.ts  asteroid-settings.bqi.ts  asteroid-settings.ca.ts  asteroid-settings.ckb.ts  asteroid-settings.cs.ts  asteroid-settings.da.ts  asteroid-settings.de.ts  asteroid-settings.de_DE.ts  asteroid-settings.desktop.h  asteroid-settings.el.ts  asteroid-settings.en_GB.ts  asteroid-settings.eo.ts  asteroid-settings.es.ts  asteroid-settings.es_AR.ts  asteroid-settings.fa.ts  asteroid-settings.fi.ts  asteroid-settings.fr.ts  asteroid-settings.gl.ts  asteroid-settings.he.ts  asteroid-settings.hi.ts  asteroid-settings.hr.ts  asteroid-settings.hu.ts  asteroid-settings.ia.ts  asteroid-settings.id.ts  asteroid-settings.isv.ts  asteroid-settings.it.ts  asteroid-settings.ja.ts  asteroid-settings.ka.ts  asteroid-settings.kab.ts  asteroid-settings.ko.ts  asteroid-settings.lb.ts  asteroid-settings.lt.ts  asteroid-settings.mr.ts  asteroid-settings.ms.ts  asteroid-settings.nb.ts  asteroid-settings.nb_NO.ts  (+25 more)
src/: CMakeLists.txt  VolumeControl2.xml  WatchfaceHelper.cpp  WatchfaceHelper.h  main.cpp  mce.xml  process.h  resources.qrc  sysinfo.cpp  sysinfo.h  taptowake.cpp  tilttowake.cpp  volumecontrol.cpp  volumecontrol.h
src/qml/: AboutPage.qml  AutomationEditPage.qml  BatteryHistoryGraph.qml  BluetoothPage.qml  CompactListItem.qml  DatePage.qml  DisplayPage.qml  FillBarRow.qml  LanguagePage.qml  LauncherPage.qml  ListItem.qml  NightstandPage.qml  NightstandWatchfacePage.qml  PowerManagerPage.qml  PowerPage.qml  PoweroffPage.qml  ProfileEditPage.qml  ProfileListPage.qml  ProfileSelectorPage.qml  QuickPanelPage.qml  QuickSettingsPage.qml  RebootPage.qml  SoundPage.qml  TimePage.qml  TimezonePage.qml  USBPage.qml  UnitsPage.qml  WallpaperPage.qml  WatchfacePage.qml  WatchfaceRemovePage.qml  WatchfaceSelector.qml  WatchfaceSettingsContainer.qml  WatchfaceStorePage.qml  WiFiConnectionDialog.qml  WiFiPage.qml  main.qml
tests/: CMakeLists.txt  tst_qmlvalidation.cpp
tests/mock-qml/Nemo/DBus/: DBus.qml  DBusInterface.qml  qmldir
tests/mock-qml/org/asteroid/controls/: Dims.qml  Icon.qml  IconButton.qml  Label.qml  LabeledSwitch.qml  LayerStack.qml  ListItem.qml  ListRow.qml  OptionCycler.qml  PageHeader.qml  RemorseTimer.qml  RowSeparator.qml  StatusPage.qml  qmldir
tests/mock-qml/org/asteroid/utils/: DeviceInfo.qml  qmldir
